// ============================================================================
// /supplychain/batch-traceability-service (版本 2.0)
// 描述: 提供批次的端到端追溯功能，包括向上追溯（到原材料）和向下追溯（到客户）。
//       字段设计参考核心ERP的批次主数据 (MCH1, MCHA) 和批次使用清单 (CHVW)。
// ============================================================================

syntax = "proto3";

package sc.bt.v1;

option go_package = "github.com/enterprise/erp/protos/sc/bt;bt";


import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// ============================================================================
// 服务定义: BatchTraceabilityService
// ============================================================================

service BatchTraceabilityService {

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    description: "提供批次的端到端追溯功能，包括向上追溯（到原材料）和向下追溯（到客户）。"
  };
  // 创建批次 (New)
  rpc CreateBatch(CreateBatchRequest) returns (BatchResponse) {

    option (google.api.http) = {

      post: "/api/v1/supplychain/batch"

      body: "*"

    };

  }

  // 向上追溯批次 (找到其来源) - 异步
  rpc TraceUpstream(TraceRequest) returns (common.v1.JobInfo) {


    option (google.api.http) = {


      post: "/api/v1/supplychain/trace-upstream"


      body: "*"


    };


  }

  // 向下追溯批次 (找到其去向) - 异步
  rpc TraceDownstream(TraceRequest) returns (common.v1.JobInfo) {


    option (google.api.http) = {


      post: "/api/v1/supplychain/trace-downstream"


      body: "*"


    };


  }
  
  // 获取批次历史记录 (New)
  rpc GetBatchHistory(GetBatchHistoryRequest) returns (BatchHistoryResponse) {

  
    option (google.api.http) = {

  
      get: "/api/v1/supplychain/batch-history"

  
    };

  
  }

  // 获取追溯作业结果
  rpc GetTraceResult(GetTraceResultRequest) returns (TraceabilityTree) {


    option (google.api.http) = {


      get: "/api/v1/supplychain/trace-result"


    };


  }
}

// ============================================================================
// 数据结构: Traceability (追溯)
// ============================================================================

// 追溯树
message TraceabilityTree {
  // 根节点
  TraceabilityNode root = 1;
  // 树的生成时间
  google.protobuf.Timestamp generated_at = 2;
}

// 追溯节点
message TraceabilityNode {
  // 物料编号
  string material = 1;
  // 批次号
  string batch = 2;
  // 工厂
  string plant = 3;
  // 节点类型 (例如, RAW_MATERIAL, FINISHED_GOOD, WIP)
  common.v1.NodeType node_type = 4;
  // 相关的文档 (例如, 生产订单, 采购订单, 交货单)
  common.v1.SystemDocumentReference reference_document = 5;
  // 生产/收货日期
  google.protobuf.Timestamp event_date = 6;
  // 数量
  common.v1.QuantityValue quantity = 8;
  // 子节点
  repeated TraceabilityNode children = 7;
}

message BatchHistoryEvent {
  google.protobuf.Timestamp event_time = 1;
  string event_type = 2;
  string user_id = 3;
  string details = 4;
  common.v1.SystemDocumentReference document = 5;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 创建批次请求
message CreateBatchRequest {
  string material = 1;
  string plant = 2;
  string origin_batch = 3; // For split batches or re-packaging
  google.protobuf.Timestamp production_date = 4;
  google.protobuf.Timestamp expiration_date = 5;
  string supplier_batch = 6;
  common.v1.RequestContext context = 99;
}

message BatchResponse {
  bool success = 1;
  string batch_number = 2;
  repeated common.v1.ApiMessage messages = 3;
}

// 追溯请求
message TraceRequest {
  // 物料编号
  string material = 1;
  // 批次号
  string batch = 2;
  // 工厂
  string plant = 3;
  // 追溯深度限制
  int32 depth_limit = 4;
  common.v1.RequestContext context = 99;
}

message GetTraceResultRequest {
  string job_id = 1;
  common.v1.RequestContext context = 99;
}

message GetBatchHistoryRequest {
  string material = 1;
  string batch = 2;
  string plant = 3;
  common.v1.RequestContext context = 99;
}

message BatchHistoryResponse {
  repeated BatchHistoryEvent events = 1;
}
